talos/kubernetes/apps/watchyourlan/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: watchyourlan
  namespace: watchyourlan
  annotations:
    tailscale.com/funnel: "false"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: watchyourlan
                port:
                  number: 8840
  tls:
    - hosts:
        - watchyourlan
